# LabMate

./: .gitmodules  README.md
antc/: CMakeLists.txt  antennactl.c  antennactl.h  config.h  config_checks.h  hmc349.c  hmc349.h  libgpiod  log.h  main.c
labserv/: .gitignore  CMakeLists.txt  Containerfile  README.md  config-sample.h  config.h  db.c  db.h  log.c  log.h  lsapi.c  lsapi.h  main.c  oph.c  oph.h  tracker.c  tracker.h
labserv/htdocs/: about.html  chat.html  email-verification.html  faculties.html  index.html  inventory.html  ipfs-test.html  labs.html  logged-common.html  login.html  profile.html  reagent.html  reagents.html  signup.html  terms-and-conditions.html
labserv/sql/: init.sql
plantuml/: compo_diagram.puml  compo_diagram_1.puml  compo_diagram_2.puml
qps/: .gitignore  CMakeLists.txt  README.md  lw400.c  lw400.h  main.c  printer.c  printer.h  printer_common.h  qr_data_adapter.c  qr_data_adapter.h
qps/toolchains/: windows-toolchain.cmake
raqmc/: CMakeLists.txt  README.md  acall.c  acall.h  config-sample.h  log-levels.h  log.c  log.h  main.c  mcapi.c  mcapi.h  measurements.c  measurements.h  qpcall.c  qpcall.h  rscall.c  rscall.h  walker.c  walker.h
rr/: .gitignore  CMakeLists.txt  Containerfile  README.md  config-sample.h  config.h  mailer.c  mailer.h  main.c
rscs/: CMakeLists.txt  Doxyfile  README.md  experimental_2_main.c  experimental_main.c  libusb-cmake  log.h  main.c  old_main.c  plibsys  tag_err.h  uhfd.c  uhfd.h  uhfman.c  uhfman.h  uhfman_common.h  utils.c  utils.h  ypdr200.c  ypdr200.h
rscs/demo/monitoring/: mon.py  mon1.py
rscs/demo/rscs-sox/: measure.sh  prep_sample_tag.sh  sound-indicator.sh
tools/: measurement_sound_indicator.py
tools/fastmon/: telemetry.c  telemetry.h
tools/fastmon/client-source/: CMakeLists.txt  ch340.h  libusb-cmake  log.h  main.c  plibsys  tag_err.c  ypdr200.c
tools/fastmon/server-sink/: CMakeLists.txt  config.h  main.c  visualizer.c  visualizer.h
tools/monitoring/: .env.sample  mon2.py
tools/r420-stats/: .gitignore  README.md  build.sh  data.csv  data1.csv  main.c  main.s  piano_2.csv  r420-stats  r420.c  r420.h  stol_l_2.csv  stol_r_2.csv  test.csv  tmp.csv  util.s
tools/r420-stats-asm/: main.s
tools/r420-stats/analysis/: .gitignore  main.c
tools/r420-stats/classification/: .gitignore  dnn.py  load_network.py  main.py  requirements.txt  train.py  train_optim.py
tools/r420-stats/classification/data/: README.md
tools/r420-stats/collector/: .boilerplate.c  collector  fh.c  fh.h  main.c  mbuffer.c  mbuffer.h
tools/r420-stats/collector/graphics_experimentation/: plot.c  plot_raw.c  plotraw.c  vis.h
tools/r420-stats/collector/watchdog/: watchdog.py
tools/r420-stats/ml/: .gitignore  Dataset1_outputs.npy  Dataset2_outputs.npy  Dataset3_outputs.npy  Val1_outputs.npy  Val2_outputs.npy  Val3_outputs.npy  _main.py  assess.py  assess_debug.py  assess_simple.py  dataset1_inputs.npy  dataset1_outputs.npy  dataset2_inputs.npy  dataset2_outputs.npy  dataset3_inputs.npy  dataset3_outputs.npy  ev.py  evaluate_model.py  model.py  prepare.py  requirements.txt  synth.py  tr.py  train.py  train_tqdm.py  train_tqdm_val.py  train_tqdm_val_gpuoptimized.py  train_tqdm_val_gpuoptimized_seq.py  train_tqdm_val_gpuoptimized_seq_CE.py  val1_inputs.npy  val1_outputs.npy  val2_inputs.npy  val2_outputs.npy  val3_inputs.npy  val3_outputs.npy
tools/r420-stats/ml/continuous/: evaluate_discrete.py  evaluate_model.py  model.py  prepare.py  stream_inference.py  train.py
tools/r420-stats/plotting/scripts/gnuplot/: all__epc_time.plt  bbbbbbbbbbbbbbbbbbbbbbbb__doppler_freq.plt  bbbbbbbbbbbbbbbbbbbbbbbb__phase_freq.plt  bbbbbbbbbbbbbbbbbbbbbbbb__phase_freq_OVERLAY.plt  bbbbbbbbbbbbbbbbbbbbbbbb__phase_freq_OVERLAY_MOD.plt  bbbbbbbbbbbbbbbbbbbbbbbb__phase_freq_POLAR.plt  bbbbbbbbbbbbbbbbbbbbbbbb__phase_time.plt  bbbbbbbbbbbbbbbbbbbbbbbb__rssi16_freq.plt  bbbbbbbbbbbbbbbbbbbbbbbb__rssi16_time.plt  bbbbbbbbbbbbbbbbbbbbbbbb__rssi8_time.plt  mbuf_plot.plt
tools/r420-stats/plotting/scripts/python/: .gitignore  README.md  all__epc_time.py
tools/rscs-sox/: prep_sample_tag.sh  sound-indicator.sh
tools/rssi_gifer/: main.c  rssi_gif
tools/rssi_gifer/data/singleton-collective/: 1.json
tools/rssi_gifer/data/ypd-r200-collective-1/: 10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
tools/rssi_gifer/data/ypd-r200-collective-2/: 1.json  10.json  11.json  12.json  13.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
tools/rssi_gifer/data/ypd-r200-collective-3/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
tools/rssi_gifer/data/ypd-r200-collective-4/: 1.json  2.json  3.json
tools/rssi_gifer/python/: rssi_anim.py
tools/simulation/: tex-square.sh  tex-transform.sh
tools/ypdr200-rssi-stats/: CMakeLists.txt  acall.c  config.h  main.c  rscall.c  rscall.h
tools/ypdr200-rssi-stats-ll/: .gitignore  CMakeLists.txt  ch340.c  config.h  libusb-cmake  main.c  plibsys  uhfman.c  uhfman.h  uhfman_common.h  ypdr200.c
